--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Jitu assignment</title>
 </head>
 <body>
-   
+   <div class="header">
+      <h2 class="header"><span class="the">THE</span><span class="jitu">Jitu</span></h2>
+      <p>THE Jitu is an IT Staff augmentation firm that offers scalable remote software engineers to businesses. Our engineers are recent computer science graduates and the entire team in Nyeri, Kenya is led on-site by American executives.</p>
+   </div>
 </body>
 </html>
