--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Jitu assignment</title>
 </head>
 <body>
-   
+   <header>
+        <nav>
+            <h2>THE JITU.COM</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Terms and condition</a></li>
+            </ul>
+        </nav>
+   </header>
 </body>
 </html>
