--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <title>Jitu assignment</title>
 </head>
 <body>
-   <header>
-        <nav>
-            <h2>THE JITU.COM</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Terms and condition</a></li>
-            </ul>
-        </nav>
-   </header>
+   <div class="main">
+     <h1>Welcome to Jitu Training</h1>
+   </div>
+   <div class="content">
+      <img src="Assests\videoMosh.png"  class="card" >
+      <a href="https://www.youtube.com/watch?v=qz0aGYrrlhU" >
+        WATCH VIDEO
+      </a>
+   </div>
 </body>
 </html>
