--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jitu assignment</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-   <div class="header">
-      <h2 class="header"><span class="the">THE</span><span class="jitu">Jitu</span></h2>
-      <p>THE Jitu is an IT Staff augmentation firm that offers scalable remote software engineers to businesses. Our engineers are recent computer science graduates and the entire team in Nyeri, Kenya is led on-site by American executives.</p>
-   </div>
+   <header>
+        <nav class="navbar">
+         <div class="logo">
+            <span><a href="#">The Jitu</a></span>
+         </div>
+         <div class="nav-items">
+            <span><a href="#">Home</a></span>
+            <span><a href="#">About</a></span>
+            <span><a href="#">Contact</a></span>
+            <span><a href="#">Terms and condition</a></span>
+         </div>
+        </nav>
+   </header>
 </body>
 </html>
