Added CSS styling to the body

--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>Jitu assignment</title>
 </head>
 <body>
-   <div class="main">
-     <h1>Welcome to Jitu Training</h1>
-   </div>
-   <div class="content">
-      <img src="Assests\videoMosh.png"  class="card" >
-      <a href="https://www.youtube.com/watch?v=qz0aGYrrlhU" >
-        WATCH VIDEO
-      </a>
-   </div>
+    
+      <div class="main">
+        <h1>Welcome to Jitu Training</h1>
+      </div>
+      <div>
+        <p class="description">
+            Our absolute beginner tutorial will turn you from wannabe to webmaster in just a few hours. Unlike many other HTML tutorials, it’s a step-by-step guide – not a boring long-winded reference.Our step-by-step guide teaches you the basics of HTML and how to build your first website. That means how to layout an HTML page, how to add text and images, how to add headings and text formatting, and how to use tables.
+
+
+        </p>
+      </div>
+      <div class="content">
+        <img src="Assests\videoMosh.png"  class="card" >
+        <div>
+        <p class="link">HTML Tutorial for Beginners: HTML Crash Course</p>
+        <p class="title"><a href="https://www.youtube.com/watch?v=qz0aGYrrlhU" >
+            <span class="link">Code with Mosh </span> 
+          </a>
+        </p>
+        
+    </div>
+      </div>
+
 </body>
 </html>
