--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
             </ul>
         </nav>
    </header>
+   <div class="footer">
+    <h1>The Jitu</h1>
+   <p>A Software Company in Nyeri</p>
+   <h1>How to Find Us</h1>
+   <p>Kimathi Way,KDS Building, 2nd Floor</p>
+   <p>P.O Box 1126,Nyeri</p>
+   <p>Phone 0898765345</p>
+   <p>Email:hello@thejitu.com</p>
+   
+<div class="section1">
+    <h1>Copyright THEJitu 2023. All Rights Reserved.</h1>
+   </div>
+   </div>
 </body>
 </html>
